math-core/tests/snapshots/conversion_test__integral_with_lower_limit.snap
---
source: math-core/tests/conversion_test.rs
expression: "\\int\\limits_0 dx"
---
<math>
    <munder>
        <mo lspace="0">∫</mo>
        <mn>0</mn>
    </munder>
    <mi>d</mi>
    <mi>x</mi>
</math>
