math-core/tests/snapshots/conversion_test__integral_with_upper_limit.snap
---
source: math-core/tests/conversion_test.rs
expression: "\\int\\limits^1 dx"
---
<math>
    <mover>
        <mo lspace="0">∫</mo>
        <mn>1</mn>
    </mover>
    <mi>d</mi>
    <mi>x</mi>
</math>
